snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.110420-3.pom.sha512
b084507e1185a06d0bcb6929807c670cbacc79ad984cacfb92402a87c569fd0ee10bbaf52885aa6ae806f80476709af071e26303d90daff97b27a1e47fb5b5e8